--- a/templates/layout/_layout.jade
+++ b/templates/layout/_layout.jade
@@ -36,9 +36,9 @@ html
 
 		block js
 			if debug
-				script(src="http://192.168.128.80:8080/webpack-dev-server.js")
+				script(src="http://localhost:8080/webpack-dev-server.js")
 				script(src='https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js')
-				script(src="http://192.168.128.80:8080/dist/js/app.js")
+				script(src="http://localhost:8080/dist/js/app.js")
 			else
 				script(src='https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js')
 				script(src="./dist/js/app.js")
